--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
     <application
         android:name=".core.App"
         android:allowBackup="false"
-        android:icon="@mipmap/launcher_main"
-        android:label="@string/App_Name"
+        android:icon="@mipmap/ic_launcher_foreground"
+        android:label="GoodGains"
         android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppTheme.DayNight"
@@ -76,21 +76,21 @@
         <activity-alias
             android:name="${applicationId}.MainLauncherAlias"
             android:enabled="true"
-            android:icon="@mipmap/launcher_main"
-            android:label="@string/App_Name"
+            android:icon="@mipmap/ic_launcher_foreground"
+            android:label="GoodGains"
             android:exported="true"
             android:targetActivity=".modules.launcher.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter android:label="@string/App_Name">
+            <intent-filter android:label="GoodGains">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="wc" />
             </intent-filter>
-            <intent-filter android:label="@string/App_Name">
+            <intent-filter android:label="GoodGains">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
@@ -100,7 +100,7 @@
         <activity-alias
             android:name="${applicationId}.DarkLauncherAlias"
             android:enabled="false"
-            android:icon="@mipmap/launcher_dark"
+            android:icon="@mipmap/ic_launcher_foreground1"
             android:label="@string/App_Name"
             android:exported="true"
             android:targetActivity=".modules.launcher.LauncherActivity">
@@ -108,13 +108,13 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter android:label="@string/App_Name">
+            <intent-filter android:label="GoodGains">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="wc" />
             </intent-filter>
-            <intent-filter android:label="@string/App_Name">
+            <intent-filter android:label="GoodGains">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
@@ -124,15 +124,15 @@
         <activity-alias
             android:name="${applicationId}.MonoLauncherAlias"
             android:enabled="false"
-            android:icon="@mipmap/launcher_mono"
-            android:label="@string/App_Name"
+            android:icon="@mipmap/ic_launcher_foreground"
+            android:label="GoodGains"
             android:exported="true"
             android:targetActivity=".modules.launcher.LauncherActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter android:label="@string/App_Name">
+            <intent-filter android:label="GoodGains">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
@@ -196,7 +196,7 @@
         <activity-alias
             android:name="${applicationId}.YakLauncherAlias"
             android:enabled="false"
-            android:icon="@mipmap/launcher_yak"
+            android:icon="@mipmap/ic_launcher_foreground"
             android:label="@string/App_Name"
             android:exported="true"
             android:targetActivity=".modules.launcher.LauncherActivity">
